# bilibili_fans

./: sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  app_wifi.c  main.c
main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h
main/ui/images/: ui_img_bilibili_png.c  ui_img_bilibiliname_png.c
main/ui/screens/: ui_Screen1.c
